# AlgoLab

./: .gitignore  5. Gestion de la Mémoire et des Types.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STITCH_PROMPT.md  Structure_Projet.md  algolab.spec  pyproject.toml  requirements.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: build-release.yml
docs/: 01_vision_et_scopes.md  02_grammaire.md  03_ast.md  04_architecture_interpreteur.md  05_memoire_et_types.md  06_diagnostics.md  WEB_00_PLAN_GLOBAL.md  WEB_01_LANDING_PAGE_COPY.md  WEB_02_DOCUMENTATION_STRUCTURE.md  WEB_03_GETTING_STARTED.md  WEB_04_INSTALLATION_MULTI_OS.md  WEB_05_PAGE_EXTENSION_VSCODE.md  WEB_06_FAQ_TROUBLESHOOTING.md  WEB_07_MODELES_PAGES.md  WEB_README.md  resume_projet_algolab.txt
examples/: boucles.algo  conditions.algo  declarations.algo  facture.algo  fonctions.algo  hello_world.algo  lire.algo  max_min.algo  menu_calcul.algo  moyenne_classe.algo  sinon_si.algo  tableaux.algo  temperature.algo
scripts/: build_deb.sh  run.py  run.sh  validate_grammar.py
src/algolab/: __init__.py  ast_nodes.py  environment.py  errors.py  grammar.lark  interpreter.py  lexer.py  main.py  parser.py
tests/: conftest.py  test_edge_cases.py  test_errors.py  test_interpreter.py  test_lexer.py  test_main.py  test_parser.py  test_types.py
vscode-extension/: extension.js  package.json
