[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algolab"
version = "0.1.0"
description = "Interpréteur pédagogique d'un pseudo code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lark>=1.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
algolab = "algolab.main:main"

[project.urls]
Homepage = "https://github.com/adandeigor/AlgoLab"

[tool.hatch.build.targets.wheel]
packages = ["src/algolab"]

[tool.hatch.build.targets.wheel.force-include]
"src/algolab/grammar.lark" = "algolab/grammar.lark"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]